Update dockerfile
- Modified entry point to use shell commands with $PORT set from ENV